--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "promises-aplus-tests": "*"
   },
   "scripts": {
-    "test": "promises-aplus-tests other-promise.js"
+    "test-mine": "promises-aplus-tests my-promise.js",
+    "test-other": "promises-aplus-tests other-promise.js"
   }
 }
